test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_make_expr.draco
proc main() void : a := make(a, int); corp;

