test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_make_as_stmt.draco
proc main() void : make(a, int); corp;

